fix text and button spacing - header text

--- a/css/global/global.sass
+++ b/css/global/global.sass
@@ -65,3 +65,12 @@ body
             h1 
                 font-size: 2.5em
                 font-weight: 400
+                color: $primary-color
+                margin-bottom: .5em
+
+            p 
+                color: $secondary-color
+                margin-bottom: 2.5em
+                line-height: 1.5em
+
+            
