--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,13 @@ body {
 .section-header .container .header-text h1 {
   font-size: 2.5em;
   font-weight: 400;
+  color: #2d314d;
+  margin-bottom: 0.5em;
+}
+.section-header .container .header-text p {
+  color: #9698a6;
+  margin-bottom: 2.5em;
+  line-height: 1.5em;
 }
 
 ul {
